running sth on the quantum...

--- a/gates.ipynb
+++ b/gates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9bb70d6e-52a0-40cd-8490-3d9264acc89b",
    "metadata": {
     "tags": []
@@ -13,7 +13,7 @@
      "output_type": "stream",
      "text": [
       "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 3\u001b[1;36m\n",
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 3\u001b[1;36m\n",
       "\u001b[1;33m    from qiskit.tools.jupyter import *\u001b[1;36m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m\u001b[1;31m:\u001b[0m No module named 'qiskit.tools'\n",
       "\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dca20a9e-b48f-45d8-8b63-abbf021106ca",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e1b32a53-defa-4bef-9a21-1c45ae3d7650",
    "metadata": {
     "tags": []
@@ -109,9 +109,9 @@
      "output_type": "stream",
      "text": [
       "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 5\u001b[1;36m\n",
-      "\u001b[1;33m    HGate(), # new hgate\u001b[1;36m\n",
-      "\u001b[1;31mNameError\u001b[0m\u001b[1;31m:\u001b[0m name 'HGate' is not defined\n",
+      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 19\u001b[1;36m\n",
+      "\u001b[1;33m    service = QuiskitRuntimeService()\u001b[1;36m\n",
+      "\u001b[1;31mNameError\u001b[0m\u001b[1;31m:\u001b[0m name 'QuiskitRuntimeService' is not defined\n",
       "\n",
       "Use %tb to get the full traceback.\n"
      ]
@@ -142,7 +142,7 @@
        "  color: white;\n",
        "}\n",
        "</style>\n",
-       "<a href=\"https://stackoverflow.com/search?q=NameError: name 'HGate' is not defined\" target='_blank'><button class='button iqx-button'>Search for solution online</button></a>\n"
+       "<a href=\"https://stackoverflow.com/search?q=NameError: name 'QuiskitRuntimeService' is not defined\" target='_blank'><button class='button iqx-button'>Search for solution online</button></a>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -154,7 +154,10 @@
    ],
    "source": [
     "from qiskit.circuit.library import HGate\n",
+    "\n",
     "# testing - \"random gen\" - if we now mesure the qubit is should be random because of the collaps from the superposition\n",
+    "\n",
+    "\n",
     "qc = QuantumCircuit(1)\n",
     "\n",
     "qc.append(\n",
@@ -162,7 +165,17 @@
     "    [0]      # to qubit 1\n",
     ")\n",
     "\n",
-    "qc.draw('mpl')"
+    "qc.measure_all()\n",
+    "\n",
+    "qc.draw('mpl')\n",
+    "\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService, Sampler\n",
+    "\n",
+    "service = QuiskitRuntimeService()\n",
+    "backend = service.least_busy(simulator=False, operational=True)\n",
+    "sampler = Sampler(backend)\n",
+    "job = sampler.run(qc)\n",
+    "job.result()\n"
    ]
   },
   {
